# models/click.go
@@ -1,0 +1,115 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Click click
+// swagger:model Click
+type Click struct {
+
+	// date created
+	// Format: date-time
+	DateCreated strfmt.DateTime `json:"dateCreated,omitempty"`
+
+	// id
+	// Required: true
+	// Minimum: 1
+	ID *int64 `json:"id"`
+
+	// link Id
+	// Required: true
+	// Minimum: 1
+	LinkID *int64 `json:"linkId"`
+
+	// Where the transition came from
+	Referer string `json:"referer,omitempty"`
+}
+
+// Validate validates this click
+func (m *Click) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateDateCreated(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateLinkID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Click) validateDateCreated(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.DateCreated) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("dateCreated", "body", "date-time", m.DateCreated.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Click) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	if err := validate.MinimumInt("id", "body", int64(*m.ID), 1, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Click) validateLinkID(formats strfmt.Registry) error {
+
+	if err := validate.Required("linkId", "body", m.LinkID); err != nil {
+		return err
+	}
+
+	if err := validate.MinimumInt("linkId", "body", int64(*m.LinkID), 1, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Click) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Click) UnmarshalBinary(b []byte) error {
+	var res Click
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
